# first-python-package

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/reference/: imppkg.harmonic_mean.rst  imppkg.harmony.rst  imppkg.rst
src/: .readthedocs.yaml
src/imppkg/: harmonic_mean.c  harmonic_mean.pyx  harmony.py
test/: test_harmonic_mean.py  test_mul.py
