[metadata]
name = pubpypack-harmony-weiwen-chen
version = 0.0.2

url = https://github.com/weiwenchen2022/first-python-package

author = weiwenchen
author_email = "weiwenchen2022@163.com"

description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src

packages = find:

include_package_data = True

python_requires = >=3.9
install_requires =
    termcolor>=3.1.0,<4


[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

######################
# Tool configuration #
######################

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = imppkg
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/imppkg
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py313,py312,py311

[testimports]
deps =
    pytest

[testenv]
deps =
    {[testimports]deps}
    pytest-cov
    pytest-randomly

commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    pytest
    mypy
    types-termcolor

commands =
    mypy --ignore-missing-imports {posargs:src test}

[mypy]
python_version = 3.9
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}


[flake8]
max-line-length = 120
